0.28
    - irchal-seed: Prepend a space to lines beginning with '#' so MegaHAL
      won't ignore them in megahal.trn
    - irchal-seed: Add a --version option

0.27  Sat Nov 14 14:22:06 GMT 2009
    - Fix a problem with the English correction, especially when non-ASCII
      characters are involved

0.26  Fri Nov 13 18:32:41 GMT 2009
    - Various documentation enhancements

0.25  Fri Nov 13 15:28:54 UTC 2009
    - Add English punctuation correction feature

0.24  Fri May  8 11:56:34 UTC 2009
    - Remove some duplicate code which was causing an warning

0.23  Tue May  5 15:03:41 UTC 2009
    - irchal-seed: Always strip color and formatting codes
    - Depend on new PoCo::AI::MegaHAL which has a bugfix

0.22  Tue May  5 13:58:11 GMT 2009
    - irchal-seed: Always output text in UTF-8

0.21  Thu Apr 30 12:58:33 GMT 2009
    - Updated documentation
    - Outsource recoding to irc_to_utf8() of PoCo::IRC 6.06

0.20  Fri Mar 27 19:04:53 GMT 2009
    - Fix error in Makefile.PL

0.19  Wed Mar 25 23:49:54 GMT 2009
    - Forgot to import some functions. Oops.

0.18  Wed Mar 25 23:45:28 GMT 2009
    - Rename irchal_seed to irchal-seed
    - Enable the stripping of color/formatting codes with --strip

0.17  Wed Mar 25 16:48:34 UTC 2009
    - Add irssi support to irchal_seed
    - Make irchal_seed's casemapping configurable
    - Improve irchal_seed's documentation

0.16  Sun Mar  8 01:59:32 GMT 2009
    - Fix typo which was causing CTCP ACTIONs to be ignored
    - Some Pod updates

0.15  Sat Nov 29 19:28:53 GMT 2008
    - Added a tip on ignoring URL-only lines to the SYNOPSIS

0.14  Sat Nov 29 19:16:34 GMT 2008
    - Added program irchal_seed to create a MegaHAL brain from IRC logs

0.13  Sat Nov 29 15:44:05 GMT 2008
    - It now sees ACTIONs as "$nick $action"

0.12  Sat Nov 15 02:58:06 GMT 2008
    - Renamed 'Ignore' parameter to 'Ignore_masks'
    - Renamed 'Flood_interval' parameter to 'Abuse_interval'
    - Added 'Ignore_regexes' option
    - Added 'Talkative' option